# apple-music-playlist-converter

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  apple_music_explorer.ipynb  convert_to_spotify.py  get_apple_music.py  pyproject.toml
.github/workflows/: python-versions.yml
apple_music_lib/: get_apple_music.py
logger_lib/: __init__.py
requirements/: common.txt
src/: config.py  main.py  models.py
src/apple_music_lib/: get_apple_music.py
src/backend/: .env.example  README.md  app.py  run_cli.py
src/backend/apple_music_lib/: __init__.py  get_apple_music.py
src/backend/core/: __init__.py  config.py  models.py
src/backend/helpers/: __init__.py  cli_input.py  helper_functions.py
src/backend/logger_lib/: __init__.py  create_logger.py
src/frontend/: .env.example  .gitignore  README.md  reflex.json  rxconfig.py
src/frontend/frontend/: components.py  frontend.py  state.py
src/frontend/frontend/core/: config.py
src/helpers/: __init__.py  helper_functions.py
src/logger_lib/: create_logger.py
