[project]
name = "apple-music-playlist-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mock>=5.2.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.14.14",
    "spotipy>=2.25.2",
    "tenacity>=9.1.2",
]

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
]
